--- a/src/components/Create_NFT/NFT.module.css
+++ b/src/components/Create_NFT/NFT.module.css
@@ -44,3 +44,17 @@
     font-size: 40px;
     margin-bottom: -5px;
 }
+
+.img{
+    height: 300px;
+    background-color: #F1F1F1;
+    border: 2px dashed #8D8D8D;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.img1 {
+    width: 200px;
+}
